# aegis-event-bus

./: .bandit  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  audit_full.md  audit_report.md  audit_report_full.md  code_bundle.md  docker-compose.yml  expert_audit_report.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_import.py
.github/workflows/: ci.yml
app/: agent_router.py  agent_service.py  archivist.py  cert_manager.py  cli.py  config.py  db.py  endpoints.py  enhanced_logging.py  error_handling.py  error_router.py  logging_config.py  main.py  messaging.py  middleware.py  middleware_security.py  models.py  monitoring.py  schemas.py  security.py  security_config.py  task_router.py  task_service.py  validators.py
app/utils/: time.py
docker/db-init/: 00-init.sh  00-init.sql
docs/: DEPLOYMENT.md  OPERATIONS.md
migrations/: env.py
migrations/versions/: 7c165f5e0b93_agents_tasks.py  bd536313df34_create_audit_log.py  bd536313df34_tz_default.py  cb6f8b7a3720_rename_agents_to_agent_registry_and_add_.py
mosquitto/certs/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
mosquitto/conf/: mosquitto.conf
scripts/: backup_database.py  disaster_recovery.py  fix_utc_times.py  make_audit_bundle.sh  make_code_bundle.py  make_full_audit.py  monitoring_alerts.py  no_bom_check.py  remove_bom.py  restore_database.py  use-local-env.ps1
tests/: conftest.py  test_api.py  test_archivist.py  test_hash_integrity.py  test_pagination.py  test_secrets.py  test_security_headers.py
